# snip

./: Cargo.toml  magic.sh  main.js  package-lock.json  package.json
demo/: lib1.rs  lib2.rs  lib3.rs  lib4.rs  lib5.rs  lib6.rs
